src/test/deca/context/invalid/ContextAvecObjet/Cast/afterUpCast_method.deca
//Description
//  Appel d'une méthode après upcast
//
//Résultat
//  Erreur contextuelle ligne 21
//  identificateur non défini

class A{
    int un(){
        return 1;
    }
}
class B extends A{
    A spawner(){
        return new A();
    }
}
{
    B b = new B();
    A a = (A)(b);
    a.spawner();
}